--- a/app/src/main/res/layout/fragment_puzzles.xml
+++ b/app/src/main/res/layout/fragment_puzzles.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:tag="FRAGMENT_PUZZLES"
-    >
+    android:id="@+id/fragment_puzzles">
 
     <TextView
         android:layout_width="wrap_content"
