--- a/Reminder/app/src/main/res/values/styles.xml
+++ b/Reminder/app/src/main/res/values/styles.xml
@@ -2,10 +2,16 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
+
         <item name="android:colorPrimary">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:colorAccent">@color/colorAccent</item>
+
+        <item name="actionOverflowButtonStyle">@style/ActionButtonOverFlow</item>
     </style>
 
+    <style name="ActionButtonOverFlow" parent="android:style/Widget.Holo.Light.ActionButton.Overflow">
+        <item name="android:src">@drawable/more_icon</item>
+
+    </style>
 </resources>
