--- a/Reminder/app/src/main/res/layout/fragment_current_task.xml
+++ b/Reminder/app/src/main/res/layout/fragment_current_task.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CurrentTaskFragment">
+    tools:context=".fragment.CurrentTaskFragment">
 
     <TextView
         android:layout_width="wrap_content"
