--- a/Reminder/app/src/main/res/values/colors.xml
+++ b/Reminder/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorAccent">#FFEB3B</color>
     <color name="colorPanel">#B0BEC5</color>
 
+    <color name="grey">#616161</color>
+    <color name="dark_grey">#212121</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
 </resources>
