--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -14,13 +14,13 @@
         android:fontFamily="@font/muller_bold"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="40sp"
-        android:lineSpacingExtra="10dp"
+        android:textSize="@dimen/final_score_text_size"
+        android:lineSpacingExtra="@dimen/final_score_line_spacing_extra"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4"/>
+        app:layout_constraintVertical_bias="@dimen/final_score_vertical_bias"/>
 
     <EditText
         android:id="@+id/user_name"
@@ -31,7 +31,7 @@
         android:hint="@string/enter_your_name"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:textSize="24sp"
+        android:textSize="@dimen/user_name_text_size"
         android:maxLength="12"
         android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,11 +44,11 @@
         android:id="@+id/save_result_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorTopBar"
+        android:background="@color/colorPrimary"
         android:textColor="@color/white"
         android:fontFamily="@font/muller_medium"
-        android:textSize="18sp"
-        android:padding="10dp"
+        android:textSize="@dimen/save_result_button_text_size"
+        android:padding="@dimen/save_result_button_padding"
         android:text="@string/save_result"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
