--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,53 +10,53 @@
     <ImageView
         android:id="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_height="@dimen/logo_height"
+        android:layout_marginStart="@dimen/logo_margin"
+        android:layout_marginEnd="@dimen/logo_margin"
         android:src="@drawable/logo"
         android:contentDescription="@string/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="@dimen/logo_vertical_bias" />
 
     <ImageButton
         android:id="@+id/startButton"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/start_button_size"
+        android:layout_height="@dimen/start_button_size"
         android:background="@drawable/start_button"
         android:contentDescription="@string/start_game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="@dimen/start_button_vertical_bias" />
 
     <ImageButton
         android:id="@+id/settingsButton"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/settings_leaderboard_button_size"
+        android:layout_height="@dimen/settings_leaderboard_button_size"
         android:background="@drawable/settings_button"
         android:contentDescription="@string/settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/startButton"
-        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintHorizontal_bias="@dimen/settings_button_horizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="@dimen/settings_leaderboard_button_vertical_bias" />
 
     <ImageButton
         android:id="@+id/leaderboardButton"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/settings_leaderboard_button_size"
+        android:layout_height="@dimen/settings_leaderboard_button_size"
         android:background="@drawable/leaderboard_button"
         android:contentDescription="@string/settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/startButton"
-        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintHorizontal_bias="@dimen/leaderboard_button_horizontal_bias"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="@dimen/settings_leaderboard_button_vertical_bias" />
 
 </android.support.constraint.ConstraintLayout>
