--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#1a1a1a</color>
     <color name="colorPrimaryDark">#252525</color>
     <color name="colorAccent">#FF5533</color>
+    <color name="colorSecondAccent">#9ADB38</color>
     <color name="colorBackground">#252525</color>
-    <color name="colorTopBar">#1a1a1a</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
