--- a/app/src/main/res/layout/fragment_words.xml
+++ b/app/src/main/res/layout/fragment_words.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_words"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    android:tag="FRAGMENT_WORDS"
-    android:id="@+id/fragment_words"
-    >
+    android:tag="FRAGMENT_WORDS">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Words"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textSize="30sp"
-        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/words_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
