--- a/Reminder/app/src/main/res/layout/activity_main.xml
+++ b/Reminder/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/content_frame"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/coordinator"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        tools:context=".MainActivity">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="112dp"
-            tools:ignore="MissingConstraints" />
-
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/app_bar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="MissingConstraints">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimaryDark"
-                tools:ignore="MissingConstraints" />
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:tabBackground="@color/white"
-                app:tabIndicatorColor="@color/colorPrimaryDark"
-                app:tabSelectedTextColor="@color/colorPrimaryDark"
-                app:tabTextColor="@color/colorPanel" />
-
-        </android.support.design.widget.AppBarLayout>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/add_icon"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-
-
-            tools:ignore="MissingConstraints"/>
-
-    </android.support.constraint.ConstraintLayout>
-
-</FrameLayout>
+<?xml version="1.0" encoding="utf-8" ?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/content_frame"    android:layout_width="match_parent"    android:layout_height="match_parent">    <android.support.constraint.ConstraintLayout        android:id="@+id/coordinator"        android:layout_width="match_parent"        android:layout_height="match_parent"        tools:context=".MainActivity">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical">            <android.support.design.widget.AppBarLayout                android:id="@+id/app_bar_layout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                tools:ignore="MissingConstraints">                <android.support.v7.widget.Toolbar                    android:id="@+id/toolbar"                    android:layout_width="match_parent"                    android:layout_height="?attr/actionBarSize"                    android:background="@color/colorPrimaryDark"                    app:layout_scrollFlags="scroll|enterAlways"                    tools:ignore="MissingConstraints" />                <android.support.design.widget.TabLayout                    android:id="@+id/tab_layout"                    android:layout_width="match_parent"                    android:layout_height="?attr/actionBarSize"                    app:layout_scrollFlags="scroll|enterAlways"                    app:tabBackground="@color/white"                    app:tabIndicatorColor="@color/colorPrimaryDark"                    app:tabSelectedTextColor="@color/colorPrimaryDark"                    app:tabTextColor="@color/colorPanel" />            </android.support.design.widget.AppBarLayout>            <android.support.v4.view.ViewPager                android:id="@+id/pager"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                app:layout_behavior="@string/appbar_scrolling_view_behavior"                tools:ignore="MissingConstraints" />        </LinearLayout>        <android.support.design.widget.FloatingActionButton            android:id="@+id/fab"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:src="@drawable/add_icon"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toEndOf="parent"            tools:ignore="MissingConstraints" />    </android.support.constraint.ConstraintLayout></FrameLayout>
