--- a/Reminder/app/src/main/res/layout/fragment_current_task.xml
+++ b/Reminder/app/src/main/res/layout/fragment_current_task.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".fragment.CurrentTaskFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Current task"
-        android:layout_gravity="center"
-        android:textSize="35sp"/>
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/rvCurrentTasks"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:scrollbars="vertical"
+       android:clipToPadding="false"
+       android:paddingBottom="88dp" >
+   </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
