--- a/Reminder/app/src/main/res/layout/model_task.xml
+++ b/Reminder/app/src/main/res/layout/model_task.xml
@@ -14,8 +14,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_toRightOf="@+id/tvTaskDate"
-        android:layout_alignParentLeft="true"
-        android:text="Title"/>
+        android:layout_alignParentLeft="true" />
     
     <TextView
         android:layout_width="wrap_content"
@@ -23,8 +22,7 @@
         android:id="@+id/tvTaskDate"
         android:gravity="right"
         android:textSize="14sp"
-        android:textColor="@color/grey"
-        android:text="Date"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_alignParentRight="true"
         android:layout_marginTop="19dp"
         android:layout_margin="16dp"/>
