--- a/app/src/main/res/layout/dialog_task.xml
+++ b/app/src/main/res/layout/dialog_task.xml
@@ -56,7 +56,16 @@
                     android:cursorVisible="false"/>
             </android.support.design.widget.TextInputLayout>
 
-        </RelativeLayout>
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spDialogTaskPriority"
+                android:layout_below="@+id/tilDialogTaskDate"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="10dp"/>
 
+
+        </RelativeLayout>
 
     </ScrollView>
